A test that hangs at cleanup stage confuses webkitpy hugely https://bugs.webkit.org/show_bug.cgi?id=122475 <rdar://problem/17184354>

Reviewed by Anders Carlsson.

Source/WebKit2:
Reset m_pageLoadState when the process exits cleanly - otherwise messages from a
new process for the same WebPageProxy would hit assertions.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidCrash):
(WebKit::WebPageProxy::resetStateAfterProcessExited):

Tools:
Terminate WebContent process if it freezes between tests. Ideally, we should report
this somehow, but this is better than blaming the wrong test.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::terminateWebContentProcess):
* WebKitTestRunner/TestController.h:
* WebKitTestRunner/TestInvocation.cpp: (WTR::TestInvocation::invoke):


Canonical link: https://commits.webkit.org/152917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171167 268f45cc-cd09-0410-ab3c-d52691b4dbfc